Fix icon link alignment in navbar

--- a/src/components/Icons.module.css
+++ b/src/components/Icons.module.css
@@ -9,3 +9,7 @@
   height: 1em;
   width: 1em;
 }
+
+.link {
+  height: var(--font-1);
+}
